fix: little fix

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -541,7 +541,7 @@
     },
     "status_filter": {
       "active": "Активные",
-      "complite": "Выполненные",
+      "complete": "Выполненные",
       "develop": "В разработке",
       "agreed": "На согласовании"
     },
@@ -610,7 +610,7 @@
     "no_project": "На данный момент у вас нет проектов",
     "status_filter": {
       "active": "Активные",
-      "complite": "Выполненные",
+      "complete": "Выполненные",
       "new": "Новые заказы",
       "agreed": "На согласовании"
     },
@@ -758,10 +758,10 @@
     "status_filter": {
       "active": "Активные",
       "waiting": "Ожидают принятия",
-      "complite": "Выполненные",
+      "complete": "Выполненные",
       "reject": "Отклоненные",
       "moderation": "На модерации",
-      "uncomplite": "Невыполненные"
+      "uncomplete": "Невыполненные"
     },
 
     "card": {
@@ -769,7 +769,7 @@
         "active": "В работе",
         "check": "На проверке",
         "wait": "В ожидании",
-        "complite": "Выполнен",
+        "complete": "Выполнен",
         "cancel": "Отменен",
         "moderation": "На модерации",
         "reject": "Отклонен"
@@ -805,7 +805,7 @@
         "title": "Заказ отклонен",
         "text": "Напоминаем, что слишком частая отмена заказов может понизить ваш рейтинг"
       },
-      "complite": {
+      "complete": {
         "title": "Заказ выполнен"
       },
       "moderation": {
@@ -2111,7 +2111,7 @@
         },
 
         "status": {
-          "complite": "Выполнена",
+          "complete": "Выполнена",
           "reject": "Отклонена",
           "pending": "В ожидании"
         }
@@ -2122,7 +2122,7 @@
       "types": {
         "wait":"Ожидают",
         "active": "В работе",
-        "complite":"Завершены"
+        "complete":"Завершены"
       },
 
       "bar": {
@@ -2194,7 +2194,7 @@
         "status": {
           "wait": "Ожидает",
           "active": "Активный",
-          "complite": "Завершен"
+          "complete": "Завершен"
         }
 
       }
