fix: design fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -829,8 +829,9 @@
     },
 
     "days": {
-      "day": "дня",
-      "days": "дней"
+      "day": "день",
+      "days": "дней",
+      "dayss": "дня"
     },
 
     "offer_status": {
@@ -1601,10 +1602,10 @@
       "title": "Как это работает?",
       "choose_tarif": "Выбрать тариф",
       "step_1": {
-        "title": "От вас",
+        "title": "От вас:",
         "text": [
-          { "text": "Выбрать и оплатить комфортный для вас тариф" },
-          { "text": "Описать ваш проект и пожелания по рекламной кампании" }
+          { "text": "выбрать и оплатить комфортный для вас тариф" },
+          { "text": "описать ваш проект и пожелания по рекламной кампании" }
         ]
       },
       "step_2": {
