feat: add AdminApi Users

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2100,10 +2100,10 @@
     },
     "users": {
       "bar": {
-        "id": "ID транзакции",
+        "id": "ID пользователя",
         "name": "Имя пользователя",
         "email": "Почта",
-        "date": "Дата создания",
+        "date": "Дата регистрации",
         "status": "Статус"
       },
 
