feat: add AdminApi Complaints

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2189,7 +2189,7 @@
       "types": {
         "wait": "Ожидают",
         "active": "В работе",
-        "complite":"Завершены"
+        "complete":"Завершены"
       },
 
       "bar": {
