--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -638,7 +638,7 @@
       },
       "moderation": {
         "title": "На модерации",
-        "text": "Решение по вашей заявки будет принято в течение ",
+        "text": "Решение по вашей заявке будет принято в течение ",
         "small": "24 часов"
       },
       "waiting": {
@@ -716,7 +716,7 @@
       },
       "moderation": {
         "title": "На модерации",
-        "text": "Решение по вашей заявки будет принято в течение ",
+        "text": "Решение по вашей заявке будет принято в течение ",
         "small": "24 часов"
       },
       "waiting": {
