feat: update AdminApi Reviews &  accept / reject logic

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1870,6 +1870,19 @@
   },
 
   "toasts": {
+    "admin": {
+      "review": {
+        "accept": {
+          "success": "Отзыв принят",
+          "error": "Ошибка во время принятия отзыва"
+      },
+      "reject": {
+          "success": "Отзыв отклонен",
+          "error": "Ошибка во время отклонения отзыва"
+      }
+      }
+    },
+
     "turnkey": {
       "success": "Тариф куплен",
       "error": "Ошибка покупки тарифа"
