feat: update AdminApi Complaints -  accept / reject logic

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1880,6 +1880,16 @@
           "success": "Отзыв отклонен",
           "error": "Ошибка во время отклонения отзыва"
       }
+      },
+      "complaint": {
+        "accept": {
+          "success": "Жалоба принятя",
+          "error": "Ошибка во время принятия жалобы"
+      },
+      "reject": {
+          "success": "Жалоба отклонена",
+          "error": "Ошибка во время отклонения жалобы"
+      }
       }
     },
 
