feat: add Admin ban / unban channel, choose / make decision complaint

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1871,6 +1871,30 @@
 
   "toasts": {
     "admin": {
+      "channel": {
+        "accept": {
+          "success": "Модерация канала принята",
+          "error": "Ошибка во время принятия модерации канала"
+       },
+
+       "reject": {
+          "success": "Модерация канала отклонена",
+          "error": "Ошибка во время отклонения модерации канала"
+        },
+
+        "ban": {
+          "success": "Канал заблокирован",
+          "error": "Ошибка во время блокирования канала"
+       },
+
+       "unban": {
+          "success": "Канал разблокирован",
+          "error": "Ошибка во время разблокирования канала"
+        }
+
+
+      },
+
       "review": {
         "accept": {
           "success": "Отзыв принят",
@@ -2106,6 +2130,7 @@
 
         "buttons": {
           "ban": "Заблокировать",
+          "unban": "Разблокировать",
           "update": "Обновить",
           "reject": "Отклонить",
           "accept": "Утвердить"
@@ -2215,6 +2240,11 @@
     },
 
     "complaints": {
+      "choose": {
+        "title": "Взятие жалобы в работу",
+        "text": "Нажимая кнопку принять вы берете жалобу в работу и должны принять решение в пользу одной из сторон"
+      },
+
       "types": {
         "wait": "Ожидают",
         "active": "В работе",
@@ -2240,7 +2270,12 @@
           "low": "Низкий",
           "medium": "Средний",
           "high": "Высокий"
+        },
+
+        "buttons": {
+          "accept": "Принять"
         }
+
       }
     },
 
@@ -2278,13 +2313,18 @@
         },
 
         "decision": {
-          "title": "Примите решение"
+          "title": "Примите решение",
+          "placeholder": "Напишите причину",
+          "have_decision": "Решение принято в пользу"
         },
 
         "buttons": {
+          "make_decision": "Принять решение",
+          "see_decision": "Показать решение",
           "decision": "Принять решение",
           "reject": "Отклонить",
-          "accept": "Принять"
+          "accept": "Принять",
+          "ok": "Хорошо"
         },
 
         "status": {
