feat: update Admin Reviews stus cards

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2255,7 +2255,9 @@
         "id": "ID запроса",
         "sender": "Отправитель",
         "theme": "Тема",
-        "date": "Дата",
+        "created": "Дата",
+        "completed": "Дата закрытия",
+        "moderator": "Модереатор",
         "priority": "Приоритет"
       },
 
