feat: add Edit user feat & dropdown menu (need fix bugs) and wrong file additions due npm run build

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -122,7 +122,7 @@
     "blogger": "Блогер",
     "advertiser": "Рекламодатель",
     "manager": "Менеджер",
-    "administrator": "Администратор"
+    "moderator": "Модератор"
   },
 
   "my_profile": {
@@ -2162,6 +2162,7 @@
         },
 
         "menu": {
+          "title": "Настройки пользователя",
           "details": "Подробнее",
           "send_message": "Написать сообщение",
           "edit": "Редактировать",
