feat: add Edit channel Admin

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1890,6 +1890,11 @@
        "unban": {
           "success": "Канал разблокирован",
           "error": "Ошибка во время разблокирования канала"
+        },
+
+        "edit": {
+          "success": "Данные канала обновлены",
+          "error": "Ошибка во время обновления данных канала"
         }
 
 
