feat: add user profile data (need test)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1967,6 +1967,23 @@
         "error": "При изменении данных профиля произошла ошибка"
       }
     },
+    "profile" : {
+      "edit": {
+        "user":  {
+          "success": "Данные пользователя успешно изменены",
+          "error": "При изменении данных пользователя произошла ошибка"
+        },
+        "password":  {
+          "success": "Пароль успешно обновлен",
+          "error": "При изменении пароля произошла ошибка",
+          "nonEqual": "Пароли должны совпадать"
+        },
+        "event":  {
+          "success": "Флаг успешно обновлен",
+          "error": "При изменении флага произошла ошибка"
+        }
+      }
+    },
     "wallet": {
       "profile": {
         "error": "Ошибка при заполнении данных"
