fix: rework user profile data

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1976,7 +1976,8 @@
         "password":  {
           "success": "Пароль успешно обновлен",
           "error": "При изменении пароля произошла ошибка",
-          "nonEqual": "Пароли должны совпадать"
+          "nonEqual": "Пароли должны совпадать",
+          "equal": "Новый пароль должен отличаться от старого"
         },
         "event":  {
           "success": "Флаг успешно обновлен",
