feat: add Admin user info page and api endpoint

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2209,6 +2209,18 @@
         }
       }
     },
+    "userInfo": {
+      "card": {
+        "title": "Информация о пользователе",
+        "first_name": "Имя пользователя",
+        "surname": "Фамилия пользователя",
+        "email": "Почта",
+        "phone": "Телефон",
+        "language": "Язык",
+        "location": "Локация"
+      }
+    },
+
     "transactions": {
       "bar": {
         "id": "ID транзакции",
