feat: add replace channel/post in adv order card and npm run build

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -615,7 +615,24 @@
       "date": "Дата",
       "accommodation": "Формат размещения",
       "time": "Время размещения",
-      "price": "Цена"
+      "price": "Цена",
+
+      "replace": {
+        "comment": {
+          "title": "Укажите причину замены канала",
+          "placeholder": "Напишите причину ...   Максимально допустимая длина - 300 символов",
+          "desire": "Причина замены канала"
+        },
+        "post": {
+          "title": "Укажите причину замены поста",
+          "placeholder": "Напишите причину ...   Максимально допустимая длина - 300 символов",
+          "desire": "Причина замены поста"
+        },
+        "button": {
+          "send": "Отправить",
+          "ok": "Хорошо"
+        }
+      }
     },
     "order_status": {
       "rejected": {
@@ -2057,6 +2074,16 @@
       "add_review": {
         "success": "Отзыв успешно отправлен!",
         "error": "Произошла ошибка... Пожалуйста, попробуйте позже"
+      },
+      "replace": {
+        "comment": {
+           "success": "Мы уведомили менеджера о необходимости замены канала",
+           "error": "Во время уведомления менеджера произошла ошибка"
+        },
+        "post": {
+          "success": "Мы уведомили менеджера о необходимости замены поста",
+          "error": "Во время уведомления менеджера произошла ошибка"
+       }
       }
     },
     "create_order": {
