fix: fix providesTags in view points

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2054,7 +2054,7 @@
     },
     "orders_manager": {
       "launch_project": {
-        "success": "Вы успешно запустили реклмную кампанию, мы уведомим рекламодателя и оповестим блогеров",
+        "success": "Вы успешно запустили рекламную кампанию, мы уведомим рекламодателя и оповестим блогеров",
         "error": "Во время запуска рекламной кампании произошла ошибка"
       }
     },
