--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1778,8 +1778,8 @@
     }
   },
 
-  "download_all_files": "Скачать все файлы",
-  "copy_post_text": "Скопировать текст поста",
+  "download_all_files": "Все файлы",
+  "copy_post_text": "Текст",
 
   "add_platform_btn": {
     "check": "Проверить",
@@ -1875,9 +1875,9 @@
         "accept": {
           "success": "Модерация канала принята",
           "error": "Ошибка во время принятия модерации канала"
-       },
+        },
 
-       "reject": {
+        "reject": {
           "success": "Модерация канала отклонена",
           "error": "Ошибка во время отклонения модерации канала"
         },
@@ -1885,9 +1885,9 @@
         "ban": {
           "success": "Канал заблокирован",
           "error": "Ошибка во время блокирования канала"
-       },
+        },
 
-       "unban": {
+        "unban": {
           "success": "Канал разблокирован",
           "error": "Ошибка во время разблокирования канала"
         },
@@ -1896,29 +1896,27 @@
           "success": "Данные канала обновлены",
           "error": "Ошибка во время обновления данных канала"
         }
-
-
       },
 
       "review": {
         "accept": {
           "success": "Отзыв принят",
           "error": "Ошибка во время принятия отзыва"
-      },
-      "reject": {
+        },
+        "reject": {
           "success": "Отзыв отклонен",
           "error": "Ошибка во время отклонения отзыва"
-      }
+        }
       },
       "complaint": {
         "accept": {
           "success": "Жалоба принятя",
           "error": "Ошибка во время принятия жалобы"
-      },
-      "reject": {
+        },
+        "reject": {
           "success": "Жалоба отклонена",
           "error": "Ошибка во время отклонения жалобы"
-      }
+        }
       }
     },
 
@@ -1967,19 +1965,19 @@
         "error": "При изменении данных профиля произошла ошибка"
       }
     },
-    "profile" : {
+    "profile": {
       "edit": {
-        "user":  {
+        "user": {
           "success": "Данные пользователя успешно изменены",
           "error": "При изменении данных пользователя произошла ошибка"
         },
-        "password":  {
+        "password": {
           "success": "Пароль успешно обновлен",
           "error": "При изменении пароля произошла ошибка",
           "nonEqual": "Пароли должны совпадать",
           "equal": "Новый пароль должен отличаться от старого"
         },
-        "event":  {
+        "event": {
           "success": "Флаг успешно обновлен",
           "error": "При изменении флага произошла ошибка"
         }
@@ -2284,7 +2282,7 @@
       "types": {
         "wait": "Ожидают",
         "active": "В работе",
-        "complete":"Завершены"
+        "complete": "Завершены"
       },
 
       "bar": {
@@ -2313,7 +2311,6 @@
         "buttons": {
           "accept": "Принять"
         }
-
       }
     },
 
