fix: rework provideTags and adv/manager subcard

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -618,7 +618,7 @@
       "price": "Цена",
 
       "replace": {
-        "comment": {
+        "channel": {
           "title": "Укажите причину замены канала",
           "placeholder": "Напишите причину ...   Максимально допустимая длина - 300 символов",
           "desire": "Причина замены канала"
@@ -709,7 +709,23 @@
       "link": "Прикрепленные ссылки",
       "file": "Прикрепленные файлы",
       "download_all": "Скачать все",
-      "send_btn": "Отправить в бот"
+      "send_btn": "Отправить в бот",
+      "change": {
+        "channel": {
+          "title": "Укажите причину замены канала",
+          "placeholder": "Напишите причину ...   Максимально допустимая длина - 300 символов",
+          "desire": "Причина замены канала"
+        },
+        "post": {
+          "title": "Укажите причину замены поста",
+          "placeholder": "Напишите причину ...   Максимально допустимая длина - 300 символов",
+          "desire": "Причина замены поста"
+        },
+        "button": {
+          "send": "Отправить",
+          "ok": "Хорошо"
+        }
+      }
     },
 
     "order_status": {
@@ -2076,7 +2092,7 @@
         "error": "Произошла ошибка... Пожалуйста, попробуйте позже"
       },
       "replace": {
-        "comment": {
+        "channel": {
            "success": "Мы уведомили менеджера о необходимости замены канала",
            "error": "Во время уведомления менеджера произошла ошибка"
         },
