feat: suspense laoding component

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1754,7 +1754,7 @@
       }
     },
     "add_to_cart": {
-      "title": "Купить размещение на канале",
+      "title": "Купить размещение",
       "format": "Формат размещения",
       "price": "Стоимость размещения",
       "add": "Добавить в корзину",
@@ -2093,13 +2093,13 @@
       },
       "replace": {
         "channel": {
-           "success": "Мы уведомили менеджера о необходимости замены канала",
-           "error": "Во время уведомления менеджера произошла ошибка"
+          "success": "Мы уведомили менеджера о необходимости замены канала",
+          "error": "Во время уведомления менеджера произошла ошибка"
         },
         "post": {
           "success": "Мы уведомили менеджера о необходимости замены поста",
           "error": "Во время уведомления менеджера произошла ошибка"
-       }
+        }
       }
     },
     "create_order": {
