fix: some fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -262,7 +262,7 @@
       },
       {
         "type": "vencom",
-        "title": "Размещение с Vencom",
+        "title": "Размещение с Blogix",
         "stages": [
           { "stage": "Зарегистрируйте аккаунт на платформе" },
           {
@@ -286,7 +286,7 @@
 
     "turnkey_title": "Запускаем рекламу под ключ",
     "turnkey_subtitle": "Выберите тариф и персональный менеджер сделает все за вас",
-    "turnkey_text": "Услуги менеджера предоставляются в качестве бонуса. Весь бюджет идёт на покупку интеграций в каталоге Vencom",
+    "turnkey_text": "Услуги менеджера предоставляются в качестве бонуса. Весь бюджет идёт на покупку интеграций в каталоге Blogix",
     "tarifs_list": [
       {
         "type": "base",
@@ -483,7 +483,7 @@
       },
       {
         "type": "vencom",
-        "title": "Размещение с Vencom",
+        "title": "Размещение с Blogix",
         "stages": [
           { "stage": "Постоянный поток крупных рекламодателей" },
           { "stage": "Гарантированная оплата" },
