fix: change Create Order Widget (need complete)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1326,7 +1326,13 @@
 
     "recomendation": "Рекомендуемые площадки",
     "hide": "скрыть",
-    "show": "показать"
+    "show": "показать",
+    "check": {
+      "amount": "Проект не укладывается в итоговую сумму",
+      "channel_to_be_replaced": "Канал на змену",
+      "not_found": "Проект Не найден",
+      "no_data": "По проекту нет информации"
+    }
   },
 
   "wallet": {
