feat: some fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1253,7 +1253,8 @@
 
     "search": {
       "parameters": "Параметры поиска",
-      "AI": "Автоподбор с ИИ"
+      "AI": "Автоподбор с ИИ",
+      "search": "Поиск..."
     },
 
     "ai": {
