feat: add remoderation logic in admin panel

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1916,6 +1916,11 @@
           "error": "Ошибка во время принятия модерации канала"
         },
 
+        "remoderation": {
+          "success": "Ремодерация канала принята",
+          "error": "Ошибка во время принятия ремодерации канала"
+        },
+
         "reject": {
           "success": "Модерация канала отклонена",
           "error": "Ошибка во время отклонения модерации канала"
@@ -2209,6 +2214,7 @@
         "status": {
           "active": "Активный",
           "moderation": "На модерации",
+          "remoderation": "На ремодерации",
           "moderation_reject": "Отклоненный",
           "inactive": "Деактивированный",
           "banned": "Заблокированный",
