feat: download posts files zip

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -816,7 +816,7 @@
       "no": "Нет"
     },
     "deactivate_channel": {
-      "title": "Вы точно хотите деактивировать канал?",
+      "title": "Вы точно хотите деактивировать канал? Все активные заказы с этим каналом будут автоматически отклонены, если у вас незавершенные заказы с этим каналом, советуем завершить все заказы, получить средства за заказ, а потом деактивировать этот канал.",
       "yes": "Да",
       "no": "Нет"
     }
