feat: add change email logic and revalidate UserData

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1043,6 +1043,37 @@
       },
       "save_btn": "Сохранить изменения"
     },
+
+    "email_block": {
+      "title": "Изменение E-mail" , 
+      "new_email": {
+        "title": "Введите новый E-mail",
+        "default_value": "Sample@gmail.com",
+        "error": {
+          "required": "поле не может быть пустым",
+          "format": "введите данные по нужному формату Sample@gmail.com"
+        }
+      },
+      "password": {
+        "title": "Введите пароль",
+        "default_value": "Sample@gmail.com",
+        "error": {
+          "required": "поле не может быть пустым"
+        }
+      },
+      "code": {
+        "title": "Код подтверждения",
+        "default_value": "123456",
+        "error": {
+          "required": "поле не может быть пустым",
+          "format": "код должен быть 6-значным"
+        }
+      },
+      "change_btn": "Изменить E-mail",
+      "send_btn": "Отправить код",
+      "back_btn": "Назад"
+    },
+
     "password_block": {
       "title": "Изменение пароля",
       "current_password": {
@@ -2021,6 +2052,15 @@
           "error": "При изменении пароля произошла ошибка",
           "nonEqual": "Пароли должны совпадать",
           "equal": "Новый пароль должен отличаться от старого"
+        },
+        "email": {
+          "success": "код отправлен на новую почту",
+          "error": "Во время отправки кода произошла ошибка",
+          "exist": "Почта уже используется"
+        },
+        "email_code": {
+          "success": "Почта успешно обновлена",
+          "error": "Во время отправки кода произошла ошибка"
         },
         "event": {
           "success": "Флаг успешно обновлен",
