feat: add infoTooltip and add in addPlatform page

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -914,11 +914,11 @@
     "identification": {
       "info": {
         "title": "Выберите платформу",
-        "text": "aa"
+        "text": "Выберите платформу, на которой размещен ваш канал."
       },
       "link": {
         "title": "Укажите ссылку",
-        "text": "aa",
+        "text": "Yкажите ссылку на ваш канал, сохраняя необходимый формат",
         "requerd": "Введите ссылку на канал",
         "invalid": "Ссылка недействительна"
       }
@@ -928,42 +928,42 @@
       "category": {
         "title": "Выберите категорию",
         "default_value": "Не выбрано",
-        "text": "аа"
+        "text": "Можно выбрать только одну категорию, которая наиболее точно отражает, что происходит в вашем канале."
       },
       "languages": {
         "title": "Выберите язык",
         "default_value": "Не выбрано",
-        "text": "аа"
+        "text": "Можно выбрать один или несколько вариантов, на которых публикуется контент в вашем канале."
       },
       "region": {
         "title": "Выберите регион",
         "default_value": "Не выбрано",
-        "text": "аа"
+        "text": "Можно выбрать один или несколько регионов, в которых находится основная аудитория вашего канала."
       },
       "sex": {
         "title": "Соотношение полов, %",
         "default_value": "Не выбрано",
-        "text": "аа"
+        "text": "Выберите соотношение мужчин и женщин в вашей аудитории в процентах."
       },
       "age": {
         "title": "Выберите возраст аудитории",
         "default_value": "Не выбрано",
-        "text": "аа"
+        "text": "Можно выбрать одну или несколько возрастных групп, которые преобладают в вашей аудитории."
       },
       "description": {
         "title": "Описание площадки",
         "default_value": "Опишите особенности, которые будут выделять ваш канал среди других.",
-        "text": "аа"
+        "text": "Опишите вашу платформу, её основные цели и уникальные особенности. Укажите, какова её основная тематика, какие типы контента преобладают, и чем она отличается от других площадок."
       },
       "price": {
         "title": "Выбери формат размещения и  укажите цену",
         "info": "О различиях в форматах размещения и назначение стоимости вы можете узнать в инструкции",
-        "text": "aa",
+        "text": "Выберите формат размещения и укажите соответствующую цену для выбранного варианта.",
         "default": "Укажите цену"
       },
       "symbol": {
         "title": "Количество символов в посту",
-        "text": "aa"
+        "text": "Укажите количество символов в посте, который вы готовы разместить, включая пробелы и знаки препинания."
       },
       "choosed": "Выбрано",
       "from": "из"
