fix: add infoTooltip in wallet and remove My infoIcon from project (replace by lucide-react)

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1132,7 +1132,7 @@
       "name": {
         "title": "Ф.И.О",
         "default_value": "Gomer German",
-        "description": "",
+        "description": "Введите вашу фамилию, имя и отчество полностью, как указано в паспорте или другом официальном документе. Обратите внимание, что данные должны совпадать с информацией в вашем банке.",
         "error": {
           "required": "поле не может быть пустым"
         }
@@ -1140,7 +1140,7 @@
       "registration_number": {
         "title": "Номер регистрации",
         "default_value": "12345678",
-        "description": "",
+        "description": "Укажите ваш регистрационный номер, присвоенный вам в процессе оформления. Этот номер используется для идентификации и проверки вашей личности.",
         "error": {
           "required": "введите без лишних символов"
         }
@@ -1148,7 +1148,7 @@
       "registration_date": {
         "title": "Дата регистрации",
         "default_value": "22.09.2023",
-        "description": "",
+        "description": "Введите дату вашей регистрации в формате ДД.ММ.ГГГГ. Убедитесь, что данные соответствуют официальным документам.",
         "error": {
           "required": "неверный формат, введите по формату дд.мм.гггг: 22.09.2023"
         }
@@ -1156,7 +1156,7 @@
       "PNFL": {
         "title": "ПИНФЛ",
         "default_value": "12345678901234",
-        "description": "",
+        "description": "Персональный идентификационный номер физического лица. Введите корректный ПИНФЛ, так как он необходим для проверки ваших данных.",
         "error": {
           "required": "неверный формат, количество символов - 14"
         }
@@ -1164,7 +1164,7 @@
       "entity": {
         "title": "Наименование фирмы",
         "default_value": "Название юрлица",
-        "description": "",
+        "description": "Укажите полное официальное название вашей компании в соответствии с регистрационными документами. Это необходимо для корректного оформления платежей и документов.",
         "error": {
           "required": "поле не может быть пустым"
         }
@@ -1172,7 +1172,7 @@
       "address": {
         "title": "Юридический адрес",
         "default_value": "Юридический адрес",
-        "description": "",
+        "description": "Введите адрес, по которому зарегистрирована ваша компания. Он может отличаться от фактического места ведения деятельности, но должен совпадать с данными в регистрационных документах.",
         "error": {
           "required": "поле не может быть пустым"
         }
@@ -1180,7 +1180,7 @@
       "INN": {
         "title": "ИНН",
         "default_value": "123456789",
-        "description": "",
+        "description": "Укажите идентификационный номер налогоплательщика (ИНН) вашей компании или индивидуального предпринимателя. Этот номер используется для налогового учета и идентификации организации.",
         "error": {
           "required": "неверный формат, количество символов - 9"
         }
@@ -1188,7 +1188,7 @@
       "individual": {
         "title": "Наименование ИП",
         "default_value": "Наименование ИП",
-        "description": "",
+        "description": "Укажите полное имя индивидуального предпринимателя, как указано в регистрационных документах. Это имя используется для идентификации в юридических и финансовых документах.",
         "error": {
           "required": "поле не может быть пустым"
         }
@@ -1199,7 +1199,7 @@
       "bank_mfo": {
         "title": "МФО банка",
         "default_value": "12345",
-        "description": "",
+        "description": "Введите межфилиальный оборотный код (МФО) банка, в котором у вас открыт счет. Этот код используется для обработки платежей.",
         "error": {
           "required": "неверный формат, количество символов - 5"
         }
@@ -1207,7 +1207,7 @@
       "bank_name": {
         "title": "Наименование банка",
         "default_value": "Наименование банка",
-        "description": "",
+        "description": " Укажите официальное название банка, в котором у вас открыт счет. Это важно для корректного зачисления средств на ваш счет.",
         "error": {
           "required": "поле не может быть пустым"
         }
@@ -1215,7 +1215,7 @@
       "checking_account": {
         "title": "Расчетный счёт",
         "default_value": "12345678901234567890",
-        "description": "",
+        "description": "Укажите номер расчетного счета, открытого на ваше имя или имя вашей организации в банке. Этот счет используется для перевода средств и других финансовых операций, связанных с вашей деятельностью.",
         "error": {
           "required": "неверный формат, количество символов - 20"
         }
@@ -1223,7 +1223,7 @@
       "transit_account": {
         "title": "Транзитный счёт",
         "default_value": "12345678901234567890",
-        "description": "",
+        "description": "Введите номер вашего транзитного счета, если он требуется для перевода средств. Этот счет используется для обработки платежей и может отличаться от вашего расчетного счета.",
         "error": {
           "required": "неверный формат, количество символов - 20"
         }
@@ -1231,7 +1231,7 @@
       "card_number": {
         "title": "Данные карты",
         "default_value": "9860123412341234",
-        "description": "",
+        "description": "Укажите номер вашей банковской карты без пробелов. Будьте внимательны при вводе, так как ошибка в номере может привести к отклонению платежа.",
         "error": {
           "required": "неверный формат, количество символов - 16"
         }
@@ -1239,7 +1239,7 @@
       "card_date": {
         "title": "Срок действия карты",
         "default_value": "мм/гг",
-        "description": "",
+        "description": "Введите срок действия вашей карты в формате MM/YY (месяц/год). Эти данные необходимы для обработки транзакций и подтверждения актуальности карты.",
         "error": {
           "required": "введите дату по формату - мм/гг: 09/23"
         }
@@ -1250,7 +1250,7 @@
       "phone": {
         "title": "Номер телефона",
         "default_value": "+998909000123",
-        "description": "",
+        "description": "Введите ваш действующий номер телефона в международном формате. Этот номер может использоваться для связи и подтверждения платежей.",
         "error": {
           "required": "введите номер телефона по нужному формату"
         }
@@ -1258,7 +1258,7 @@
       "email": {
         "title": "E-mail",
         "default_value": "sample@gmail.com",
-        "description": "",
+        "description": "Укажите ваш актуальный адрес электронной почты. На этот e-mail могут приходить уведомления о статусе выплат и другие важные сообщения.",
         "error": {
           "required": "несуществующая почта"
         }
