fix: some fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -151,7 +151,7 @@
     "addPlatform": "Добавить канал",
     "calculateIncome": "Рассчет дохода",
 
-    "orders": "Мои Рекламные компании",
+    "orders": "Мои Рекламные Кампании",
 
     "saved": "Сохранненые",
     "manager": "Работа с менеджерами",
@@ -891,7 +891,7 @@
         "title": "Заказ выполнен"
       },
       "moderation": {
-        "text": "Заказ не соответствует требованиям площадки Cubinc. Ожидайте решение администратора"
+        "text": "Заказ не соответствует требованиям площадки Blogix. Ожидайте решение администратора"
       },
       "reject": {
         "title": "Заказ аннулирован",
@@ -1045,7 +1045,7 @@
     },
 
     "email_block": {
-      "title": "Изменение E-mail" , 
+      "title": "Изменение E-mail",
       "new_email": {
         "title": "Введите новый E-mail",
         "default_value": "Sample@gmail.com",
@@ -2501,15 +2501,15 @@
     }
   },
 
-  "components": { 
+  "components": {
     "select": {
-      "placeholder": "Не выбрано", 
+      "placeholder": "Не выбрано",
       "search": "Поиск...",
       "select_all": "Выбрать все",
       "not_found": "Не найдено",
       "chosen": "Выбрано",
       "clear": "Очистить",
       "close": "Закрыть"
-  }
+    }
   }
 }
