feat: some fixes

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1755,7 +1755,8 @@
         "help": {
           "text1": "Если вам нужна помощь, обратитесь",
           "text2": " в техническую поддержку"
-        }
+        },
+        "go_to_order": "К заказу"
       }
     }
   },
