fix: fix project subcards

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -761,7 +761,7 @@
       },
       "agreed": {
         "title": {
-          "default": "Канал на согласовании",
+          "default": "Канал согласован",
           "edit": "Канал на редактировании"
         } 
       },
