feat: add downloadReport byn in adv project card

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1875,6 +1875,7 @@
   },
 
   "order_btn": {
+
     "feedback": {
       "btn_title": "Оставить отзыв",
       "description": {
@@ -1914,7 +1915,8 @@
         "process": "Меняем пост"
       }
     },
-    "seeReport": "Загрузить отчет",
+    "sendReport": "Загрузить отчет",
+    "downloadReport": "Подробный отчет",
     "continue": "Продолжить",
     "is_upload_files": "Отправляем файлы"
   },
