fix: fix is_request_approve adv mnager / manager card

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -663,8 +663,9 @@
       },
       "agreed": {
         "title": {
-          "default": "Канал на согласовании",
-          "edit": "Канал на редактировании"
+          "request_approve": "Канал на согласовании",
+          "changed": "Канал на редактировании",
+          "approved": "Канал согласован"
         } 
       },
       "template": {
@@ -701,8 +702,9 @@
       "start_btn": "Начать",
       "run_btn": "Запустить",
       "edit_btn": "Редактировать",
-      "request_approve": "Кампания была подтверждена",
-      "not_request_approve": "Рекламодатель внес изменения"
+      "approved": "Кампания была подтверждена",
+      "request_approve": "Кампания отправлена на согласование",
+      "changed": "Рекламодатель внес изменения"
     },
     "subcard": {
       "date": "Дата",
@@ -761,8 +763,8 @@
       },
       "agreed": {
         "title": {
-          "default": "Канал согласован",
-          "edit": "Канал на редактировании"
+          "approved": "Канал согласован",
+          "request_approve": "Канал на согласовании"
         } 
       },
       "comment": {
