fix: fix text new message

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2032,7 +2032,8 @@
     },
 
     "websoket": {
-      "new_message": "У вас новое уведомление"
+      "new_message": "У вас новое сообщение",
+      "new_notification": "У вас новое уведомление"
     },
     "auth": {
       "token": {
