feat: add invalidate cashe by websocket methods

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1624,7 +1624,7 @@
         "title": "Запросе на одобрения"
       },
       "notification_create_desire": {
-        "title": "Создании рекоммендаций"
+        "title": "Рекламодатель внес изменения"
       },
       "notification_launch_manager_project": {
         "title": "Запуске проекта с менеджером"
